# python-seed

./: README.md  pyproject.toml  renovate.json
.github/: settings.yml
.github/workflows/: ci.yaml  codeql.yml
python_seed/: __init__.py  __main__.py
python_seed/config/: config.py
src/python_seed/: __init__.py  __main__.py
src/python_seed/api/: widgets.py
src/python_seed/config/: config.py
tests/: test_api_widgets.py  test_config.py
