[project]
name = "python-seed"
version = "0.1.0"
description = "Python Seed project using UV, with vscode debugging defaults"
readme = "README.md"
authors = [
    { name = "Kristof Mattei", email = "864376+Kristof-Mattei@users.noreply.github.com" },
]

requires-python = ">=3.14.0"
dependencies = []

[project.scripts]
python-seed = "python_seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.19.0", "pytest>=9.0.1"]

[tool.mypy]
strict = true
